create div square, a mouse effect and button for choosing grid size

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
-    <script>
-      src = "script.js";
-    </script>
+    <button id="gridButton">Grid Size</button>
+    <div class="gridContainer"></div>
+   
+    <script src="/script.js"></script>
   </body>
 </html>
