--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
+    <div class = "header"></h1>It's time to be creative! </h1></div>
     <button id="gridButton">Choose your grid</button>
     <div class="gridContainer"></div>
     </div>
